// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds a ProgressTracker 1`] = `
<ol
  class="sc-AxjAm hFlQAN"
  data-testid="progress-tracker"
>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxgMl kaeNwZ"
      disabled=""
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ eVQxSC"
      disabled=""
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ eVQxSC"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`builds a ProgressTracker 2`] = `
<ol
  class="sc-AxjAm bgQiJZ"
  data-testid="progress-tracker"
>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxhCb dPcXKC"
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxgMl kaeNwZ"
      disabled=""
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ eVQxSC"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`builds a ProgressTracker 3`] = `
<ol
  class="sc-AxjAm hlqBBd"
  data-testid="progress-tracker"
>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxhCb dPcXKC"
    >
      <span>
        step 1
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxhCb dPcXKC"
    >
      <span>
        step 2
      </span>
    </button>
  </li>
  <li
    class="sc-AxheI fxTPsE"
  >
    <button
      class="sc-AxirZ sc-AxgMl kaeNwZ"
      disabled=""
    >
      <span>
        step 3
      </span>
    </button>
  </li>
</ol>
`;
